mcabber (1.0.0)

 * Message Carbons support / XEP-0280 (Roeland Jago Douma)
 * Support for using external password managers (Christian Burkert)
 * [UI] Add a backward completion (Oleg)
 * [UI] Multilanguage spell checking (Dmitry Potapov)
 * [UI] New option 'buffer_smart_scrolling' to lock buffer automatically
   when scrolled up (Hermitifier)
 * [UI] New command /roster next_open_buffer
 * [UI] New option 'attention_char'
 * [UI] Try to display the GLib warnings in the log window
 * [UI] Display the number of occupants in MUC rooms (shizeeque)
 * [UI] New option switch /room topic -u to unescape the topic (shizeeque)
 * [MUC] Support for storing MUC room passwords (Nico Golde)
 * [MUC] Use bookmarked password (if any) when using "/room join"
 * [Hooks] New "hook-mdr-received" hook
 * Remove support for obsolete XEP 22 (Frank Zschockelt)
 * Misc. bugfixes and minor improvements

 -- Mikael, 2015-06-28

mcabber (0.10.3)

 * [UI] Add option 'iq_time_hide'
 * [UI] Add 'iq_version_hide_os', 'iq_version_hide_version'
 * Improved handling of damaged history log files
 * Switch to libotr v4 API (Myhailo Danylenko)
 * Add SSL options (Frank Zschockelt)
   These options require a patched Loudmouth library.
   - "ssl_ciphers" to define the allowed ciphers
   - "ssl_ca" to set additional trusted certificates
 * Fix compilation for old loudmouth libraries (Frank Zschockelt)
 * Add 'color_timestamp' to highlight timestamp added by server (Hermitifier)
 * New python based event script using OS X 10.8 notification center (Sharoon Thomas)
 * Handle SIGHUP signal (Dominik George)
 * Misc. bugfixes

 -- Mikael, 2014-05-08

mcabber (0.10.2)

 * Update receipts handling according to recent XEP updates (Myhailo Danylenko)
 * Update and modularize the FIFO system (Myhailo Danylenko)
 * Modularize url_regex
 * [UI] Add readmark support - a line is displayed afer the last read message
 * New command /buffer readmark
 * Add command /iline clear_history