@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v1.0.0, June 2015
+v1.0.1-dev, June 2015
 
 NAME
 ----
